--- a/CACP/app/build.gradle
+++ b/CACP/app/build.gradle
@@ -6,8 +6,8 @@ android {
         applicationId "com.smartjackwp.junyoung.cacp"
         minSdkVersion 21
         targetSdkVersion 22
-        versionCode 1
-        versionName "1.0"
+        versionCode 2
+        versionName "1.1"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
@@ -15,6 +15,11 @@ android {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
+    }
+    lintOptions {
+        checkReleaseBuilds false
+        abortOnError false
+        ignoreWarnings true //false
     }
 }
 
@@ -25,7 +30,6 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
-    implementation files('libs/TarsosDSP-Android-latest.jar')
     implementation 'com.jjoe64:graphview:4.2.2'
-
+    implementation files('libs/TarsosDSP-Android-2.4.jar')
 }
